# slophep

./: .gitignore  .zenodo.json  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docs_static.yml
checks/: SLDecay_BdToDstFFBGL.txt  SLDecay_BsToDsstFFBGL.txt  check_utils.py  checks_BLPR_flavio.py  checks_BSZ_eos.py  checks_CLN_flavio.py  checks_Hammer_BdToDstFFBGL.txt  checks_SLDecay.py  checks_SLDecay_BdToDstFFBGL.py  checks_SLDecay_BsToDsstFFBGL.py  checks_eos.py  checks_eos_BdToDstFFBSZ.py  checks_eos_BdToPiFFBSZ.py  checks_eos_BuToDFFBSZ.py  checks_eos_LbToLcFFDKMR.py  checks_eos_LbToLcObsDKMR.py  checks_flavio.py  checks_flavio_BdToDFFBLPR.py  checks_flavio_BdToDstFFBLPR.py  checks_flavio_BdToDstFFCLN.py  checks_flavio_BuToDFFBLPR.py  checks_hammer_BdToDFFBLPR.py  checks_hammer_BdToDFFBLPR.txt  checks_hammer_BdToDstFFBGL.py  checks_hammer_BdToDstFFBLPR.py  checks_hammer_BdToDstFFBLPR.txt  checks_hammer_BdToDstFFCLN.py  checks_hammer_BdToDstFFCLN.txt  checks_hammer_BdToPiFFBCL.py  checks_hammer_BdToPiFFBCL.txt  checks_hammer_BsToDsstFFBGL.py  checks_hammer_BsToDsstFFBGL.txt  checks_hammer_BsToKFFBCL.py  checks_hammer_BsToKFFBCL.txt  checks_hammer_BuToD1FFBLR.py  checks_hammer_BuToD1FFBLR.txt  checks_hammer_BuToDFFBGL.py  checks_hammer_BuToDFFBGL.txt  checks_hammer_BuToDFFBLPR.py  checks_hammer_BuToDFFBLPR.txt  (+2 more)
checks/src_checks_SLDecay/: .gitignore  BdToDstFFBGL.cpp  BsToDsstFFBGL.cpp  Makefile  README.md  SL_Decay.cpp  SL_Decay.h  SL_Decay_Config.cpp  SL_Decay_Config.h
checks/src_checks_hammer/: .gitignore  BdToDFFBGL.cc  BdToDFFBLPR.cc  BdToDFFCLN.cc  BdToDstFFBGL.cc  BdToDstFFBGL_hack.cc  BdToDstFFBLPR.cc  BdToDstFFCLN.cc  BdToDstarFFBGL.cc  BsToDsstFFBGL.cc  BuToD1FFBLR.cc  BuToDFFBGL.cc  BuToDFFBLPR.cc  BuToDFFCLN.cc  CMakeLists.txt  HammerFFWrappers.h  README.md
checks/src_checks_hammer_v1p4p1/: .gitignore  BdToPiFFBCL.cc  BsToKFFBCL.cc  CMakeLists.txt  README.md
data/: BToDFF_BSZ_COV_arXiv181100983.json  BToDstFF_BGL_FlabMILC_COV_arXiv210514019.json  BToDstFF_BGL_JLQCD_COV_arXiv230605657.json  BToDstFF_BLPR_COV_arXiv170305330.json  BToDstFF_HPQCD_COV_arXiv230403137.json  BToPiFF_BSZ_COV_arXiv181100983.json  BsToDsstFF_HPQCD_COV_arXiv230403137.json  FF_BSZ_COV_arXiv181100983.json  FF_HPQCD_COV_arXiv230403137.json
docs/: index.html  remakedocs.sh
docs/source/: advanced.md  auto.rst  conf.py  form-factors.md  index.md  index.rst  predictions.md  reference.md  setup.md
docs/source/_templates/: custom-module-template.rst
docs/source/autodoc/: b2clnu.Predictions.BToDstMathTools.rst  b2clnu.Predictions.FormFactorsBToV.BsToDsstFF.rst  b2clnu.Predictions.FormFactorsBToV.rst  b2clnu.Predictions.SamplingTools.rst  bd2dstlnu.Predictions.BToDstFFBase.rst  bd2dstlnu.Predictions.BToDstObs.rst  bd2dstlnu.Predictions.FormFactorsBToV.rst  slophep.Experimental.evtgen_correction.rst  slophep.Fitting.CostFuncMath.rst  slophep.Fitting.Fitter.rst  slophep.Fitting.PDFBase.rst  slophep.Fitting.Parameter.rst  slophep.Generator.MCGeneratorBase.rst  slophep.Predictions.FormFactorsBToDstst.BdToD1stFF.rst  slophep.Predictions.FormFactorsBToDstst.BdToD2stFF.rst  slophep.Predictions.FormFactorsBToDstst.BsToDs0stFF.rst  slophep.Predictions.FormFactorsBToDstst.BsToDs1FF.rst  slophep.Predictions.FormFactorsBToDstst.BsToDs1stFF.rst  slophep.Predictions.FormFactorsBToDstst.BsToDs2stFF.rst  slophep.Predictions.FormFactorsBToDstst.BuToD2stFF.rst  slophep.Predictions.FormFactorsBToP.BpToDFF.rst  slophep.Predictions.FormFactorsBToP.BuToDFF.rst  slophep.Predictions.FormFactorsBToP.rst  slophep.Predictions.FormFactorsBToV.rst  slophep.Predictions.FormFactorsBaryonic.LbToLcFF.rst  slophep.Predictions.FormFactorsBaryonic.rst  slophep.Predictions.Math.BToVMathTools.rst  slophep.Predictions.Math.hqet.rst  slophep.Predictions.Math.integrals.rst  slophep.Predictions.Math.wilson_coefs.rst  slophep.Predictions.Observables.rst
python/: compare_FFschemes.py  evtgen_weighting.py  example.py  example_FLtau_comparison.py  example_fluctuations_BR.py  example_fluctuations_obs.py  example_simple.py  fluctuations_lattice.py  generator_example.py  plot_FFfitres.py  plot_coeffitres.py  plotfitres.py  test.py  test_FF_fit.py  test_FF_fit_new.py  test_coef_fit.py  test_coef_fit_v2.py  test_fluctuations.py
src/b2clnu/Predictions/: SamplingFluctuate.py
src/b2clnu/Predictions/FormFactorsBToV/: BToDstFF.py  BToVFFBGL.py  BToVFFBLPR.py  BToVFFBSZ.py  BToVFFCLN.py  BToVFFHPQCD.py  BsToDsstFF.py  __init__.py
src/b2clnu/Predictions/Observables/: BToDstObs.py  BToVEllNuObs.py  __init__.py
src/bd2dstlnu/Fitting/: PDFBase.py  PDFCoefSimple.py
src/bd2dstlnu/Predictions/: BToDstFFBGL.py  BToDstFFBLPR.py  BToDstFFBSZ.py  BToDstFFBase.py  BToDstFFCLN.py  BToDstFFHPQCD.py  BToDstMathTools.py  BToDstObs.py  Fluctuate.py  SamplingFluctuate.py  SamplingTools.py
src/bd2dstlnu/Predictions/FormFactorsBToDst/: BToDstFFBGL.py  BToDstFFBLPR.py  BToDstFFBSZ.py  BToDstFFBase.py  BToDstFFCLN.py  BToDstFFHPQCD.py  __init__.py
src/bd2dstlnu/Predictions/FormFactorsBToV/: BToDstFF.py  BToVFFBGL.py  BToVFFBLPR.py  BToVFFBSZ.py  BToVFFBase.py  BToVFFCLN.py  BToVFFHPQCD.py  BsToDsstFF.py  __init__.py
src/bd2dstlnu/Predictions/Observables/: BToDstObs.py  BToVEllNuObs.py  __init__.py
src/slophep/: utils.py
src/slophep/Experimental/: evtgen_correction.py  evtgen_tools.py
src/slophep/Fitting/: CostFuncMath.py  CostFuncs.py  Fitter.py  PDFBase.py  Parameter.py
src/slophep/Generator/: MCGeneratorBase.py  MCGenerators.py  __init__.py  root_interface.py
src/slophep/Predictions/: SamplingFluctuate.py  particle_params.py
src/slophep/Predictions/FormFactorBase/: FormFactorBase.py  __init__.py
src/slophep/Predictions/FormFactorsBToDstst/: BToD0stFFBLR.py  BToD0stISGW2.py  BToD0stLLSW.py  BToD1FFBLR.py  BToD1FFLLSW.py  (+23 more)
(+57 files in other folders)
