[project]
name = "slophep"
version = "1.3.0"
authors = [
    {name="David Vico Benet", email="david.vico.benet@cern.ch"}
]
description = "Package for semi-leptonic observable predictions"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "flavio",
    "iminuit"
]

[project.urls]
Homepage = "https://gitlab.cern.ch/dvicoben/slophep"

[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"