[project]
name = "slophep"
version = "1.4.1"
authors = [
    {name="David Vico Benet", email="david.vico.benet@cern.ch"}
]
description = "Package for semi-leptonic observable predictions"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "flavio",
    "iminuit"
]

[project.urls]
Homepage = "https://github.com/dvicoben/slophep.git"

[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"
